# story-stitch

./: .gitignore  LICENSE  README.md
backend/: .env.example  .gitignore  config.py  main.py  pyproject.toml  requirements.txt
backend/routers/: animation.py  image.py  metadata.py  script.py  voiceover.py
frontend/: .env.example  README.md  index.html  metadata.json  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BatchUploadModal.tsx  Navbar.tsx  ProjectModal.tsx  Sidebar.tsx
frontend/src/components/steps/: StepAnimation.tsx  StepConcept.tsx  StepFinalize.tsx  StepScripting.tsx  StepVisuals.tsx  StepVoiceover.tsx
frontend/src/constants/: index.tsx
frontend/src/hooks/: useAI.ts  useProject.ts
frontend/src/lib/: FilmRenderer.ts
frontend/src/types/: index.ts
